--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "axios": "^1.6.7",
     "expo": "^50.0.1",
     "expo-constants": "~15.4.5",
+    "expo-font": "^11.10.2",
     "expo-linking": "~6.2.2",
-    "expo-router": "~3.4.3",
+    "expo-router": "~3.4.7",
     "expo-splash-screen": "~0.26.3",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
